--- a/index.html
+++ b/index.html
@@ -4,32 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>WOWERITO</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    estudiantes
-                </li>
-                <li>
-                    materias lokas
-                </li>
-                <li>
-                    horarios
-                </li>
-                <li>
-                    calificaciones
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <h1>
-        sitio en construccion
-    </h1>
-    <p>
-        copyright_todos_los_derechos_reservados
-    </p>
+    <article class="paymend-card">
+        <header>
+            <img src="images.jpg" alt="Hero de la niña escuchando musica">
+        </header>
+        <main>
+            <h1>Order Sumaary</h1>
+            <p id="iq1">You can now listen to millions of songs, audiobooks,
+                 and podcasts on anu device anywhere you like!</p>
+                 <section>
+                    <div><img src="panda3d.png" alt=""></div>
+                    <div>
+                        <span id = "iq2">Annual Plan</span>
+                        <span>$59.99/year</span>
+                    </div>
+                    <div>
+                        <a href="/">Changerelized</a>
+                    </div>
+                 </section>
+        </main>
+    </article>
 </body>
 </html>
